--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="assets/images/logo.svg" alt="Logo" />
-        <button type="button">
+        <button type="button" class="hamburger-menu">
             <img src="assets/images/hamburger.svg" alt="Botão do menu" />
         </button>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">Pokédex</a>
+            <a href="#">Legendaries</a>
+            <a href="#">Documentation</a>
+        </nav>
     </header>
 </body>
 </html>
