--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="assets/images/hamburger.svg" alt="Botão do menu" />
         </button>
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" class="navbar-home"> Home </a>
             <a href="#">Pokédex</a>
             <a href="#">Legendaries</a>
             <a href="#">Documentation</a>
