Adicionado conteúdo index

--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
             <a href="#">Documentation</a>
         </nav>
     </header>
+    <main>
+        <img class="pikachu" src="assets/images/pikachu.svg" alt="pikachu"></img>
+        <div>
+            <h1><strong>Find</strong> all your favorite <strong>Pokemon</strong></h1>
+            <p>You can know the type of Pokemon, its strengths, disadvantages and abilities</p>
+            <a href="#" class="link-pokemon">See pokemons</a>
+        </div>
+    </main>
 </body>
 </html>
