Correção nas margens do  layout desktop

--- a/legendaries.html
+++ b/legendaries.html
@@ -25,75 +25,77 @@
         </nav>
     </header>
     <main>
-        <h1>Legendaries</h1>
-        <div class="legendaries-info">
-            <img src="assets/images/mew.svg" alt="mew" class="legendaries-main-img">
-            <div class="legendaries-info-content">
-                <h2 class="legendaries-name">Mew</h2>
-                <p class="legendaries-description">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                </p>
-                <div class="legendaries-stats">
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Healthy Points</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+        <div class="main-container">
+            <h1>Legendaries</h1>
+            <div class="legendaries-info">
+                <img src="assets/images/mew.svg" alt="mew" class="legendaries-main-img">
+                <div class="legendaries-info-content">
+                    <h2 class="legendaries-name">Mew</h2>
+                    <p class="legendaries-description">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                    <div class="legendaries-stats">
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Healthy Points</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Experience</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Experience</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Attack</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Attack</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Defense</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Defense</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Special Attack</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Special Attack</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="legendaries-stats-card">
-                        <p class="card-title">Special Defense</p>
-                        <p class="card-content">1000,000</p>
-                        <div class="card-charge-loader">
-                            <div class="card-charge-loader-filled"></div>
-                            <div class="card-charge-loader-empty"></div>
+                        <div class="legendaries-stats-card">
+                            <p class="card-title">Special Defense</p>
+                            <p class="card-content">1000,000</p>
+                            <div class="card-charge-loader">
+                                <div class="card-charge-loader-filled"></div>
+                                <div class="card-charge-loader-empty"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="legendaries-carrossel">
-            <img src="assets/images/seta-esquerda.svg" alt="seta de navegação para esquerda">
-            <img src="assets/images/cards/card-mew.svg" alt="card mew">
-            <img src="assets/images/cards/card-moltres.svg" alt="card moltres" class="hidden">
-            <img src="assets/images/cards/card-articuno.svg" alt="card articuno" class="hidden">
-            <img src="assets/images/cards/card-zapdos.svg" alt="card-zapdos" class="hidden-1">
-            <img src="assets/images/cards/card-diance.svg" alt="card-diance" class="hidden-2">
-            <img src="assets/images/cards/card-xerneas.svg" alt="card-xerneas" class="hidden-3">
-            <img src="assets/images/seta-direita.svg" alt="seta de navegação para direita">
+            <div class="legendaries-carrossel">
+                <img src="assets/images/seta-esquerda.svg" alt="seta de navegação para esquerda">
+                <img src="assets/images/cards/card-mew.svg" alt="card mew">
+                <img src="assets/images/cards/card-moltres.svg" alt="card moltres" class="hidden">
+                <img src="assets/images/cards/card-articuno.svg" alt="card articuno" class="hidden">
+                <img src="assets/images/cards/card-zapdos.svg" alt="card-zapdos" class="hidden-1">
+                <img src="assets/images/cards/card-diance.svg" alt="card-diance" class="hidden-2">
+                <img src="assets/images/cards/card-xerneas.svg" alt="card-xerneas" class="hidden-3">
+                <img src="assets/images/seta-direita.svg" alt="seta de navegação para direita">
+            </div>
         </div>
     </main>
 </body>
