--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <p>You can know the type of Pokemon, its strengths, disadvantages and abilities</p>
             <a href="#" class="link-pokemon">See pokemons</a>
         </div>
+        <a href="#" class="botao-flutuante">
+            <img src="assets/images/pokebola.svg" alt="pokebola">
+        </a>
     </main>
 </body>
 </html>
